# sierpinski-rustpy

./: Cargo.toml  README.md
exec/: plot.py  sierpinski
src/: main.rs
