[package]
name = "sierpinski"
version = "0.1.0"
authors = ["Joao Guilherme J. Marinho <gjmarinho.joao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
